[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fonts/TimeandSpace-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/background.jpg" type="Texture" id=2]
[ext_resource path="res://assets/Sounds/Menu Selection Click.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/alex-productions-epic-cinematic-gaming-cyberpunk-reset(chosic.com).mp3" type="AudioStream" id=4]
[ext_resource path="res://misc/Torch.tscn" type="PackedScene" id=5]
[ext_resource path="res://menu/SelectLevel.gd" type="Script" id=30]
[ext_resource path="res://menu/Button.tscn" type="PackedScene" id=31]

[sub_resource type="Environment" id=64]
background_mode = 4
background_energy = 0.8
ambient_light_color = Color( 0.0745098, 0.0705882, 0.47451, 1 )

[sub_resource type="DynamicFont" id=65]
size = 15
font_data = ExtResource( 1 )

[node name="SelectLevel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 30 )

[node name="Background" type="TextureRect" parent="."]
margin_left = -14.0
margin_top = -7.0
margin_right = 1906.0
margin_bottom = 1073.0
rect_scale = Vector2( 0.18, 0.18 )
texture = ExtResource( 2 )

[node name="SFXSelect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 8.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 64 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.176471, 0.254902, 0.568627, 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Buttons" type="VBoxContainer" parent="CanvasLayer"]
margin_left = 125.0
margin_top = 69.0
margin_right = 195.0
margin_bottom = 163.0
custom_constants/separation = 10

[node name="Level1" parent="CanvasLayer/Buttons" instance=ExtResource( 31 )]
custom_colors/font_color_focus = Color( 0.290196, 0.847059, 0.0941176, 1 )
custom_colors/font_color_hover = Color( 0.290196, 0.847059, 0.0941176, 1 )
text = "Desert Dune"

[node name="Level2" parent="CanvasLayer/Buttons" instance=ExtResource( 31 )]
margin_top = 26.0
margin_bottom = 42.0
custom_colors/font_color_focus = Color( 0.290196, 0.847059, 0.0941176, 1 )
custom_colors/font_color_hover = Color( 0.290196, 0.847059, 0.0941176, 1 )
text = "Mud Mania"

[node name="Back" parent="CanvasLayer/Buttons" instance=ExtResource( 31 )]
margin_top = 52.0
margin_bottom = 68.0
custom_colors/font_color_focus = Color( 0.290196, 0.847059, 0.0941176, 1 )
custom_colors/font_color_hover = Color( 0.290196, 0.847059, 0.0941176, 1 )
text = "Back"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="Label" type="Label" parent="."]
margin_left = 125.0
margin_top = 39.0
margin_right = 200.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 65 )
text = "Select Level"

[node name="Torch" parent="." instance=ExtResource( 5 )]
position = Vector2( 15, 15 )
frame = 6

[node name="Torch2" parent="." instance=ExtResource( 5 )]
position = Vector2( 304, 15 )
frame = 5

[connection signal="pressed" from="CanvasLayer/Buttons/Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/Back" to="." method="_on_Back_pressed"]
